--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,10 @@
 <h1>Details:</h1>
 
-<p> <%= @tasks.find(@id).details %></p>
+<p> <%= @task.details %></p>
+
+<%= link_to "Delete",
+  task_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
+
+<%# <p><%= link_to 'home'  %></p> %>
